--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.3",
     "react-leaflet": "^4.2.1",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.22.0",
