--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.7",
     "dompurify": "^3.0.8",
+    "i18next": "^23.8.2",
     "ionicons": "^7.2.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
