--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^23.8.2",
     "ionicons": "^7.2.2",
     "leaflet": "^1.9.4",
+    "nodemailer": "^6.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.3",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.14",
     "tailwindcss": "^3.4.1"
   }
 }
