--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "@ionic/react": "^7.7.0",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@react-email/components": "0.0.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "apexcharts": "^3.46.0",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "dompurify": "^3.0.8",
     "firebase": "^10.8.0",
     "i18next": "^23.8.2",
@@ -17,12 +20,15 @@
     "leaflet": "^1.9.4",
     "nodemailer": "^6.9.9",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-email": "2.0.0",
     "react-fast-marquee": "^1.6.3",
     "react-leaflet": "^4.2.1",
     "react-lottie": "^1.2.4",
+    "react-refresh": "^0.14.0",
     "react-router-dom": "^6.22.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spring": "^9.7.3",
     "sentiment": "^5.0.2",
     "web-vitals": "^2.1.4",
