--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dompurify": "^3.0.8",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.8.0",
     "i18next": "^23.8.2",
     "ionicons": "^7.2.2",
